--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -3,7 +3,7 @@
   <head>
     <title>Night Vale Community Library</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='Content/css/styles.css'>
+    <link rel='stylesheet' href='~/Content/css/styles.css'>
   </head>
   <body>
     <div class="jumbotron text-center">
